--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1 {
 	color: #3B2693;
 	text-align: center;
 	padding-top: 10rem;
+	padding-bottom: 2rem;
 }
 
 .main_p h1{
@@ -32,9 +33,15 @@ h3 {
 	line-height: 2rem;
 }
 
-p, article {
+p {
 	font-size: 1.25rem;
-	line-height: 2rem;
+	line-height: 1.8rem;
+}
+
+article {
+	font-size: 1.125rem;
+	line-height: 1.6rem;
+	padding-top: 2rem;
 }
 
 .header {
@@ -46,12 +53,15 @@ p, article {
 }
 
 .container {
-	max-width: 75rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	max-width: 120rem;
 	height: 6.25rem;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 20rem;
-	padding-right: 20rem;
+	padding-left: 10rem;
+	padding-right: 10rem;
 
 }
 
@@ -70,12 +80,6 @@ p, article {
 	-webkit-box-shadow: 0 10px 6px -6px #E8E4F8;
        -moz-box-shadow: 0 10px 6px -6px #E8E4F8;
             box-shadow: 0 10px 6px -6px #E8E4F8;
-}
-
-.top-panel__container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 }
 
 .menu {
@@ -112,8 +116,8 @@ p, article {
  .footer p {
  	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
-	font-size: 0.625rem;
-	line-height: 1rem;
+	font-size: 1rem;
+	line-height: 1.6rem;
 }
 
 
@@ -136,12 +140,12 @@ p, article {
 }
 
 .menu-ad {
-	margin-top: 1.5rem;
+	padding-top: 4rem;
+	padding-left: 0;
 	margin-bottom: 0;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 0;
-	list-style: none;
+  list-style: none;
 }
 
 .ad-item {
@@ -151,34 +155,39 @@ p, article {
 }
 
 .ad-item:not(:first-child){
-	margin-left: 15rem;
+	margin-left: 10rem;
 }
 
 .my-works {
 	display: flex;
   flex-wrap: wrap;
+	margin-left: 8%;
+	margin-right: 8%;
 }
 
 .works {
 	display: flex;
 	flex-direction: column;
-	max-width: 35rem;
-	min-width: 25rem;
-	margin-top: 2rem;
+	align-items: center;
+	width: 48%;
+	margin-bottom: 2rem;
 	font-size: 1.25rem;
 	line-height: 2rem;
 	color: #323030;
 	text-decoration: none;
 }
+.works:not(:first-child), .works:not(:nth-child(2)) {
+	margin-top: 2rem;
+}
 
 .works:nth-child(odd) {
 	margin-left: auto;
-	margin-right: 1rem;
+	margin-right: 2%;
 }
 
 .works:nth-child(even) {
 	margin-right: auto;
-	margin-left: 1rem;
+	margin-left: 2%;
 }
 
 .image-block {
@@ -187,8 +196,9 @@ p, article {
 
 }
 
-.image-block img {
-	max-width: 100%;
+ .image-block img {
+	width: 100%;
+	height: auto;
 	display: inline-block;
 	border-top-left-radius: 1rem;
 	border-top-right-radius: 1rem;
@@ -214,75 +224,30 @@ p, article {
 	color: #040404;
 }
 
-.wrap {
-	width: 100%;
-	max-width: 80rem;
-	min-width: 25rem;
-	padding: 1rem;
-	margin: 0 auto;
-}
 
 .about {
-	width: 60%;
-	height: 46rem;
+	display: flex;
+	flex-direction: column;
+	margin-left: 8%;
+	margin-right: 8%;
+	padding: 2rem 3rem 0 3rem;
+	box-sizing: border-box;
+	background-color: #F3F1FA;
+}
+
+.mein {
 	display: inline-block;
-	padding: 0 1rem 1rem 1rem;
-	box-sizing: border-box;
-}
-
-.my_photo {
-	width: 40%;
-	height: 46rem;
+	background-color: #F3F1FA;
 	float: right;
-	box-sizing: border-box;
+	padding-left: 1rem;
 }
 
-.my_photo img {
-	min-width: 100%;
-}
-
-
-.fixedsvg {
-    display: inline-block;
-    position: fixed;
-    bottom: 3.125rem;
-    right: 4.375rem;
-    z-index: 0;
+.download-cv {
+	display:flex;
 }
 
 
-.inputs {
-  text-align: center;
-}
-
-.form input {
-  border: none;
-  text-align: center;
-  font-size: 1.5625rem;
-  line-height: 2.5rem;
-  color: #323030;
-  padding-top: 1.93rem;
-}
-
-input:focus {
-  outline: none;
-}
-
-.line {
-  width: 39.375rem;
-  height: 0.0625rem;
-  background-color: #323030;
-  margin: 0 auto;
-}
-
-.line-mes{
-  width: 57.5rem;
-  height: 0.0625rem;
-  background-color: #323030;
-  margin: 0 auto;
-}
-
-.form-button button {
+.download {
   background-color: #F4550A;
   border: none;
   width: 12.1875rem;
@@ -292,10 +257,376 @@ input:focus {
   letter-spacing: 0.125rem;
   color: #ffffff;
   border-radius: 0.5rem;
-  margin: 3.375rem 0 4.375rem 0;
+  margin: 2.375rem auto 3.375rem auto;
 }
 
-.form-button button:hover, .form-button button:focus {
+.download:active {
   background: #D14807;
   color: #ffffff;
+}
+
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+}
+
+.line_f {
+	display:flex;
+	margin-left: 5rem;
+	margin-right: 5rem;
+}
+
+.line_f:not(:first-child){
+	margin-top: 4rem;
+}
+
+.pic {
+	display: flex;
+}
+
+.pic:nth-child(odd) {
+	width: 30rem;
+	margin-right: 1rem;
+	margin-left: auto;
+}
+
+.pic:nth-child(even) {
+	width: 30rem;
+	margin-right: auto;
+	margin-left: 1rem;
+}
+
+.story:nth-child(even) {
+	width: 30rem;
+	margin-right: 1rem;
+	margin-left: auto;
+}
+
+.story:nth-child(odd) {
+	width: 30rem;
+	margin-right: auto;
+	margin-left: 1rem;
+}
+
+
+.inputs {
+	display: flex;
+  text-align: center;
+}
+
+form {
+	width: 40rem;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #F3F1FA;
+	border-radius: 1rem;
+	-webkit-box-shadow: 0 10px 6px -6px #E8E4F8;
+			-moz-box-shadow: 0 10px 6px -6px #E8E4F8;
+					 box-shadow: 0 10px 6px -6px #E8E4F8;
+}
+
+.group {
+	width: 30rem;
+	margin-left:auto;
+	margin-right: auto;
+	display: flex;
+	flex-direction: column;
+	border-bottom: 0.0625rem solid #A4A3A9;
+}
+
+input:not([type="submit"]) {
+  border: none;
+	text-align: center;
+	-webkit-appearance: none;
+  font-size: 1.5625rem;
+	line-height: 2.5rem;
+	background-color: #F3F1FA;
+  color: #323030;
+  padding-top: 1.93rem;
+	outline: none;
+}
+
+input:not([type="submit"]):focus {
+	font-size: 1.5625rem;
+	color: #323030;
+	outline: none;
+}
+
+label {
+	color: #323030;
+	font-size: 1.5625rem;
+	font-weight: 100;
+	padding-top: 3rem;
+}
+
+
+input[type="submit"] {
+  background-color: #F4550A;
+  border: none;
+  width: 12.1875rem;
+  height: 3.125rem;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  letter-spacing: 0.125rem;
+  color: #ffffff;
+  border-radius: 0.5rem;
+  margin: 4.375rem 0 4.375rem 0;
+}
+
+input[type="submit"]:active {
+  background: #D14807;
+  color: #ffffff;
+}
+
+.menu-social {
+	padding-top: 2rem;
+	padding-bottom: 4rem;
+	padding-left: 0;
+	margin-bottom: 0;
+	margin-left: auto;
+	margin-right: auto;
+  list-style: none;
+}
+
+.icon-item {
+	display: inline-block;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.icon-item:not(:first-child){
+	margin-left: 5rem;
+}
+
+.icon {
+	width: 3.125rem;
+	height: 3.125rem;
+	fill: #F4550A;
+}
+
+.icon-circle {
+	fill: #F4550A;
+}
+
+.social_icon:hover .icon {
+	fill: #D14807;
+}
+
+.social_icon:hover .icon-circle {
+	fill: #D14807;
+}
+
+footer {
+	position: relative;
+	width: 100%;
+  height: 6.25rem;
+	padding-top: 3.5rem;
+	text-align: center;
+}
+
+.footer-panel {
+	height: 6.25rem;
+	padding-top: 2rem;
+
+	box-shadow:0px -4px 6px 0px #E8E4F8;
+	-webkit-box-shadow:0px -4px 6px 0px #E8E4F8;
+	-moz-box-shadow:0px -4px 6px 0px #E8E4F8;
+}
+
+.fixed {
+  display: inline-block;
+  position: fixed;
+  bottom: 3.125rem;
+  right: 4.375rem;
+  z-index: 0;
+}
+
+.fixedicon {
+	width: 6.25rem;
+	height: 6.25rem;
+	fill: #A4A3A9;
+}
+
+.fixed:hover .fixedicon {
+	fill: grey;
+}
+
+.container-project {
+	display: flex;
+	flex-direction: column;
+	margin-top: 4rem;
+}
+
+.project-wrap {
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.project-wrap img {
+	width: 100%;
+	height: auto;
+	display: inline-block;
+}
+
+
+
+@media (max-width: 599px) {
+   html {
+	   font-size: 8px;
+   }
+
+	 .container {
+		 padding-left: 4rem;
+		 padding-right: 4rem;
+	 }
+
+	 .top-panel {
+	 	width: 100%;
+	 	box-sizing:border-box;
+	 	padding-top: 1rem;
+	 	padding-bottom: 1rem;
+	 	position: relative;
+	 	background-color: white;
+	 	z-index: 0;
+
+	 	top: 0;
+	 	left: 0;
+
+	 	-webkit-box-shadow: 0 10px 6px -6px #E8E4F8;
+	        -moz-box-shadow: 0 10px 6px -6px #E8E4F8;
+	             box-shadow: 0 10px 6px -6px #E8E4F8;
+	 }
+
+	 .menu__link {
+	 	font-size: 1.25rem;
+	 	line-height: 2rem;
+	 	color: #3B2693;
+	 	text-decoration: none;
+	 }
+
+	.mein {
+		content: "";
+		display: block;
+		clear: both;
+	}
+
+	.menu-ad {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.ad-item:not(:first-child){
+		margin-left: 0rem;
+	}
+
+	.main_p {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
+
+  .works {
+		width: 80%;
+	}
+
+	.works:not(:first-child), .works:not(:nth-child(2)) {
+		margin-top: 0rem;
+	}
+
+	.works:nth-child(odd) {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.works:nth-child(even) {
+		margin-right: auto;
+		margin-left: auto;
+	}
+
+  .story:nth-child(odd) {
+	order: 1;
+	}
+
+	.line_f {
+		display:flex;
+		flex-direction: column;
+	}
+
+  .pic:nth-child(odd) {
+		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+   .pic:nth-child(even) {
+		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	 .story:nth-child(even) {
+		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	  .story:nth-child(odd) {
+		width: 80%;
+		margin-right: auto;
+		margin-left: auto;
+	}
+
+	.pic picture {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+
+	form {
+		width: 35rem;
+	}
+
+	.icon {
+		width: 5rem;
+		height: 5rem;
+		fill: #F4550A;
+	}
+}
+
+@media (min-width: 600px) and (max-width: 960px) {
+	html {
+		font-size: 10px;
+	}
+
+	.mein {
+		content: "";
+		display: block;
+		clear: both;
+	}
+
+	.container {
+		padding-left: 6rem;
+		padding-right: 6rem;
+	}
+
+	.fixed {
+	  display: inline-block;
+	  position: fixed;
+	  bottom: 3.125rem;
+	  right: 4.375rem;
+	  z-index: 0;
+		display: none;
+	}
+}
+
+@media (min-width: 961px) {
+	.fixed {
+		display: inline-block;
+		position: fixed;
+		bottom: 3.125rem;
+		right: 4.375rem;
+		z-index: 0;
+		display: none;
+	}
 }
