--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,14 @@ html {
 }
 
 body {
-font-family: 'Roboto', sans-serif;
-font-weight: 400;
-color: #323030;
-background-color: #F5F3FB;
+	margin: 0px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  color: #323030;
+  background-color: #F5F3FB;
+	margin: 0px;
 }
+
 
 h1 {
 	font-family: 'Rokkitt', serif;
@@ -15,8 +18,7 @@ h1 {
 	line-height: 5rem;
 	color: #3B2693;
 	text-align: center;
-	padding-top: 8rem;
-	padding-bottom: 2rem;
+	padding: 8rem 0rem 2rem 0rem;
 }
 
 .main_p h1{
@@ -29,45 +31,48 @@ h2 {
 	color: #B13C04;
 }
 
-#my_story h2 {
+#my_story h2, #contact_me h2 {
 	font-family: 'Rokkitt', serif;
 	font-size: 3.125rem;
 	line-height: 5rem;
 	color: #3B2693;
 	text-align: center;
-	padding-top: 10rem;
-	padding-bottom: 2rem;
+	padding: 10rem 0rem 2rem 0rem;
 }
 
-h3 {
+h3, p {
 	font-size: 1.25rem;
 	line-height: 2rem;
 }
 
-p {
-	font-size: 1.25rem;
-	line-height: 1.8rem;
-}
-
 .about p{
 	font-size: 1.125rem;
-	line-height: 1.6rem;
+	line-height: 1.8rem;
 	padding-top: 2rem;
 }
 
+.story {
+	font-size: 0.875rem;
+	line-height: 1.4rem;
+}
+
+.footer p {
+ 	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	font-size: 1rem;
+	line-height: 1.6rem;
+}
+/* HEADER */
 header {
-background-color: white;
-position: fixed;
-top: 0;
-right: 0;
-left: 0;
-z-index: 1030;
-padding-top: 1rem;
-padding-bottom: 1rem;
-margin-bottom: 20px;
--webkit-box-shadow: 0 4px 2px 0 #E8E4F8;
--moz-box-shadow: 0 4px 2px 0 #E8E4F8;
-box-shadow: 0 4px 2px 0 #E8E4F8;
+	width: 100%;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1030;
+  -webkit-box-shadow: 0 4px 2px 0 #E8E4F8;
+  -moz-box-shadow: 0 4px 2px 0 #E8E4F8;
+  box-shadow: 0 4px 2px 0 #E8E4F8;
 }
 
 .container {
@@ -75,11 +80,9 @@ box-shadow: 0 4px 2px 0 #E8E4F8;
 	justify-content: space-between;
 	align-items: center;
 	max-width: 120rem;
-	height: 6.25rem;
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: 10rem;
-	padding-right: 10rem;
+	height: 8.25rem;
+	margin: 0rem auto 0rem auto;
+	padding: 0rem 10rem 0rem 10rem;
 }
 
 nav {
@@ -89,8 +92,7 @@ nav {
 }
 
 nav ul {
-	margin-top: 0;
-	margin-bottom: 0;
+	margin: 0;
 	padding-left: 0;
 	list-style: none;
 }
@@ -108,22 +110,6 @@ nav ul li a {
 	text-decoration: none;
 }
 
-.title {
-	padding-top: 10rem;
-}
-
-.story {
-	font-size: 0.8125rem;
-	line-height: 1.3rem;
-}
-
-.footer p {
- 	font-family: 'Roboto', sans-serif;
-	font-weight: 300;
-	font-size: 1rem;
-	line-height: 1.6rem;
-}
-
 nav ul li a:hover, nav ul li a:focus {
 	color: #380DE4;
 	border-bottom: 0.125rem solid #380DE4;
@@ -131,6 +117,10 @@ nav ul li a:hover, nav ul li a:focus {
 
 nav ul li:not(:first-child){
 	margin-left: 3rem;
+}
+/* HOME */
+.title {
+	padding-top: 10rem;
 }
 
 .main_p {
@@ -140,26 +130,6 @@ nav ul li:not(:first-child){
 .title {
 	text-align: center;
 	margin: 4rem auto auto auto;
-}
-
-.block_gravity {
-	display: flex;
-	align-items: center;
-	height: auto;
-}
-
-.gravity {
-	display: block;
-	margin: 0 auto;
-	width: 12.5rem;
-	height: 12.5rem;
-	fill: #B13C04;
-	animation: rotate 20s infinite linear;
-}
-
-@keyframes rotate {
-	0% {transform: rotate(0deg);}
-	100% {transform: rotate(360deg);}
 }
 
 .menu h2 {
@@ -174,9 +144,7 @@ nav ul li:not(:first-child){
 
 .menu ul {
 	padding-left: 0;
-	margin-bottom: 0;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0rem auto 0rem auto;
   list-style: none;
 }
 
@@ -189,12 +157,11 @@ nav ul li:not(:first-child){
 .menu ul li:not(:first-child){
 	margin-left: 10rem;
 }
-
+/* MY WORKS */
 .my-works {
 	display: flex;
   flex-wrap: wrap;
-	margin-left: 8%;
-	margin-right: 8%;
+	margin: 0% 8% 0% 8%;
 }
 
 .works {
@@ -202,42 +169,35 @@ nav ul li:not(:first-child){
 	flex-direction: column;
 	align-items: center;
 	width: 48%;
-	margin-bottom: 2rem;
 	font-size: 1.25rem;
 	line-height: 2rem;
 	color: #323030;
 	text-decoration: none;
 }
 
-.works:not(:first-child), .works:not(:nth-child(2)) {
-	margin-top: 2rem;
-}
-
 .works:nth-child(odd) {
-	margin-left: auto;
-	margin-right: 2%;
+	margin: 0% 2% 4% auto;
 }
 
 .works:nth-child(even) {
-	margin-right: auto;
-	margin-left: 2%;
+	margin: 0% auto 4% 2%;
 }
 
 .image-block {
-	height: 75%;
+	height: 60%;
 	flex-grow: 1;
 }
 
  .image-block img {
 	width: 100%;
 	height: auto;
-	display: inline-block;
-	border-top-left-radius: 1rem;
+  display: inline-block;
 	border-top-right-radius: 1rem;
+	border-top-left-radius: 1rem;
 }
 
 .content-block {
-	height: 25%;
+	height: 40%;
 	flex-grow: 1;
 	padding: 1rem;
 	border-bottom-left-radius: 1rem;
@@ -254,12 +214,11 @@ nav ul li:not(:first-child){
 .works:hover, .works:focus {
 	color: #040404;
 }
-
+/* MY STORY */
 .about {
 	display: flex;
 	flex-direction: column;
-	margin-left: 8%;
-	margin-right: 8%;
+	margin: 0% 8% 0% 8%;
 	padding: 2rem 3rem 0 3rem;
 	box-sizing: border-box;
 	background-color: #E0D9FB;
@@ -278,31 +237,13 @@ nav ul li:not(:first-child){
 
 .download-cv {
 	display:flex;
-}
-
-.download {
-  background-color: #F4550A;
-  border: none;
-  width: 12.1875rem;
-  height: 3.125rem;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  letter-spacing: 0.125rem;
-  color: #ffffff;
-  border-radius: 0.5rem;
-  margin: 2.375rem auto 3.375rem auto;
-	transition: 0.5s background-color;
-}
-
-.download:hover {
-  background-color: #D14807;
+	align-self: center;
 }
 
 .wrapper {
 	display: flex;
   flex-wrap: wrap;
-	margin-left: 8%;
-	margin-right: 8%;
+	margin: 0% 8% 0% 8%;
 }
 
 .line_f {
@@ -325,22 +266,20 @@ nav ul li:not(:first-child){
 	width: 40%;
 }
 
-.pic picture {
+picture {
  width: 100%;
  height: auto;
  display: flex;
 }
 
 .line_s_picture {
-	margin-left: auto;
-	margin-right: 4%;
+	margin: 0% 4% 0% auto;
 }
 
 .line_f_picture {
-	margin-left: 4%;
-	margin-right: auto;
+	margin: 0% auto 0% 4%
 }
-
+/* CONTACT ME */
 .inputs {
 	display: flex;
   text-align: center;
@@ -348,8 +287,7 @@ nav ul li:not(:first-child){
 
 form {
 	width: 40rem;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0rem auto 0rem auto;
 	background-color: #E0D9FB;
 	border-radius: 1rem;
 	-webkit-box-shadow: 0 10px 6px -6px #E8E4F8;
@@ -359,8 +297,7 @@ form {
 
 .group {
 	width: 30rem;
-	margin-left:auto;
-	margin-right: auto;
+	margin: 0rem auto 0rem auto;
 	display: flex;
 	flex-direction: column;
 	border-bottom: 0.0625rem solid #A4A3A9;
@@ -411,12 +348,8 @@ input[type="submit"]:hover {
 }
 
 .menu-social ul {
-	padding-top: 2rem;
-	padding-bottom: 4rem;
-	padding-left: 0;
-	margin-bottom: 0;
-	margin-left: auto;
-	margin-right: auto;
+	padding: 2rem 0rem 4rem 0rem;
+	margin: 0rem auto 0rem auto;
   list-style: none;
 }
 
@@ -447,7 +380,7 @@ input[type="submit"]:hover {
 .menu-social ul li a:hover .icon-circle {
 	fill: #D14807;
 }
-
+/* FOOTER */
 footer {
 	position: relative;
 	width: 100%;
@@ -464,9 +397,9 @@ footer {
 	-webkit-box-shadow:0px -4px 6px 0px #E8E4F8;
 	-moz-box-shadow:0px -4px 6px 0px #E8E4F8;
 }
-
+/* ICON FIXED */
 .fixed {
-  display: inline-block;
+  display: none;
   position: fixed;
   bottom: 3.125rem;
   right: 4.375rem;
@@ -482,17 +415,16 @@ footer {
 .fixed:hover .fixedicon {
 	fill: grey;
 }
-
+/* PAGES PROJECT1-PROJECT2 */
 .container-project {
 	display: flex;
 	flex-direction: column;
-	margin-top: 10.25rem;
+	margin-top: 10.25%;
 }
 
 .project-wrap {
 	width: 84%;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0rem auto 0rem auto;
 }
 
 .project-wrap img {
@@ -501,45 +433,49 @@ footer {
 	display: inline-block;
 }
 
-@media (max-width: 599px) {
+@media (max-width: 575px) {
    html {
 	   font-size: 8px;
    }
 
-	 .container {
-		 padding-left: 4rem;
-		 padding-right: 4rem;
+	 p, h3, .story, .about p {
+		 font-size: 1.75rem;
+		 line-height: 2.8rem;
 	 }
 
-	 .container-project {
-	 	display: flex;
-	 	flex-direction: column;
-	 	margin-top: 2rem;
+	 h3 {
+		 text-align: center;
 	 }
 
-	 header {
-     background-color: white;
-     position: relative;
-     top: 0;
-     right: 0;
-     left: 0;
-     z-index: 0;
-     padding-top: 1rem;
-     padding-bottom: 1rem;
-     margin-bottom: 20px;
-     -webkit-box-shadow: 0 4px 2px 0 #E8E4F8;
-     -moz-box-shadow: 0 4px 2px 0 #E8E4F8;
-     box-shadow: 0 4px 2px 0 #E8E4F8;
-   }
+	 nav ul li a {
+		 font-size: 2rem;
+		 line-height: 3.21rem;
+	 }
+
+	 input:not([type="submit"]) {
+		 font-size: 1.75rem;
+		 line-height: 2.8rem;
+	 }
+
+	 input[type="submit"] {
+		 font-size: 1.75rem;
+		 line-height: 2.8rem;
+		 letter-spacing: 0.145rem;
+	 }
 
 	 nav ul li a {
 	 	font-size: 1.25rem;
 	 	line-height: 2rem;
-	 	color: #3B2693;
-	 	text-decoration: none;
 	 }
+/* HEADER */
+	 .container {
+		padding: 0rem 4rem 0rem 4rem;
+	}
 
-
+	header {
+		 position: relative;
+	 }
+/* HOME*/
 	 .title {
 		 padding-top: 2rem;
 	 }
@@ -558,26 +494,35 @@ footer {
 	}
 
 	.main_p {
-		padding-left: 1rem;
-		padding-right: 1rem;
+		padding: 0rem 1rem 0rem 1rem;
+	}
+/* MY WORKS*/
+	.my-works {
+		margin: 0%;
 	}
 
-  .works, .line_f {
-		width: 80%;
-	}
-
-	.works:not(:first-child), .works:not(:nth-child(2)) {
-		margin-top: 0rem;
+	.works, .line_f, form, .about {
+		width: 90%;
 	}
 
 	.works:nth-child(odd) {
-		margin-left: auto;
-		margin-right: auto;
+	  margin: 0% auto 5% auto;
 	}
 
 	.works:nth-child(even) {
-		margin-right: auto;
-		margin-left: auto;
+	  margin: 0% auto 5% auto;
+	}
+
+	.image-block {
+		height: 68%;
+	}
+
+	.content-block {
+		height: 32%;
+	}
+/* MY STORY */
+	.about {
+	  margin: 0rem auto 0rem auto;
 	}
 
 	.line_f:not(:first-child), .line_f:not(:nth-child(2)) {
@@ -586,8 +531,7 @@ footer {
 
 	.line_f {
 		flex-direction: column;
-		margin-left: auto;
-		margin-right: auto;
+	  margin: 0rem auto 0rem auto;
 	}
 
 	.line_f:nth-child(even) {
@@ -596,29 +540,43 @@ footer {
 
 	.pic, .story {
 		width: 80%;
-		margin-left: auto;
-		margin-right: auto;
+	  margin: 0rem auto 0rem auto;
 	}
 
 	.pic picture img:nth-child(odd)  {
-		margin-left: auto;
-		margin-right: auto;
+	  margin: 0rem auto 0rem auto;
 	}
 
-	form {
-		width: 35rem;
-	}
-
+/* ICON FIXED */
 	.icon {
 		width: 5rem;
 		height: 5rem;
 		fill: #F4550A;
 	}
+
+	.fixed {
+		display: inline-block;
+	}
+/* PAGES PROJECT1-PROJECT4 */
+  .container-project {
+   display: flex;
+   flex-direction: column;
+   margin-top: 5%;
+   }
+
+	 .project-wrap {
+		 width: 90%;
+	 }
 }
 
-@media (min-width: 600px) and (max-width: 960px) {
+@media (min-width: 576px) and (max-width: 991px) {
 	html {
 		font-size: 10px;
+	}
+
+	p, h3, .story, .about p {
+		font-size: 1.4rem;
+		line-height: 2.24rem;
 	}
 
 	.mein {
@@ -626,27 +584,17 @@ footer {
 	}
 
 	.container {
-		padding-left: 6rem;
-		padding-right: 6rem;
-	}
-
-	.fixed {
-	  display: inline-block;
-	  position: fixed;
-	  bottom: 3.125rem;
-	  right: 4.375rem;
-	  z-index: 0;
-		display: none;
+		padding: 0rem 6rem 0rem 6rem;
 	}
 }
 
-@media (min-width: 961px) {
-	.fixed {
-		display: inline-block;
-		position: fixed;
-		bottom: 3.125rem;
-		right: 4.375rem;
-		z-index: 0;
-		display: none;
+@media (min-width: 1200px){
+
+	.image-block {
+		height: 70%;
+	}
+
+	.content-block {
+		height: 30%;
 	}
 }
