--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,8 @@ body {
 	margin: 0px;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  color: #323030;
-  background: linear-gradient(to bottom right, #F5F3FB, #DFD9F8);
-	margin: 0px;
+  background: linear-gradient(to bottom right, #FBFAFE, #DFD9F8);
+	color: #323030;
 }
 
 
@@ -16,26 +15,30 @@ h1 {
 	font-family: 'Rokkitt', serif;
 	font-size: 3.125rem;
 	line-height: 5rem;
+	letter-spacing: 0.125rem;
 	color: #3B2693;
 	text-align: center;
 	padding: 8rem 0rem 2rem 0rem;
 	text-transform: uppercase;
 }
 
-.main_p h1{
-	color: #1C0969;
+.main-p {
+	letter-spacing: 0.25rem;
 }
 
-h2 {
+#home h2 {
 	font-size: 1.875rem;
+	font-weight: 400;
 	line-height: 3rem;
-	color: #B13C04;
+	color: #CD4607;
+	text-transform: lowercase;
 }
 
-#my_story h2, #contact_me h2 {
+ #my_works h2, #about_me h2, #my_story h2, #contact_me h2 {
 	font-family: 'Rokkitt', serif;
 	font-size: 3.125rem;
 	line-height: 5rem;
+	letter-spacing: 0.25rem;
 	color: #3B2693;
 	text-align: center;
 	padding: 10rem 0rem 2rem 0rem;
@@ -74,7 +77,7 @@ header {
 	width: 100%;
 	display: flex;
 	align-items: center;
-  background-color: #F5F3FB;
+  background-color: #FBFAFE;
   position: fixed;
   top: 0;
   left: 0;
@@ -88,14 +91,14 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	max-width: 120rem;
+	max-width: 47rem;
 	height: 5rem;
 	margin: 0rem auto;
 	padding: 0rem;
 }
 
 picture {
- width: 100%;
+ max-width: 14rem;
  height: auto;
  display: flex;
 }
@@ -182,7 +185,7 @@ nav ul li a {
 
 .menu ul {
 	padding-left: 0;
-	margin: 0rem auto 2rem auto;
+	margin: 0rem auto;
   list-style: none;
 }
 
@@ -191,13 +194,18 @@ nav ul li a {
 	vertical-align: middle;
 	text-align: center;
 	max-width: 223px;
-}
-
-.menu h2 {
-	text-transform: lowercase;
-	font-weight: 400;
 
 }
+
+.menu ul li a {
+		text-decoration: none;
+}
+
+.menu h2:hover {
+	color: #B13C04;
+}
+
+
 
 .menu ul li:not(:first-child){
 	margin-left: 10rem;
@@ -228,8 +236,15 @@ nav ul li a {
 	margin: 0% auto 4% 2%;
 }
 
+.works:last-child, .works:nth-last-child(2) {
+	margin-bottom: 0%;
+}
+
 .image-block {
 	height: 65%;
+	background-color: white;
+	border-top-right-radius: 1rem;
+	border-top-left-radius: 1rem;
 	flex-grow: 1;
 }
 
@@ -247,7 +262,7 @@ nav ul li a {
 	padding: 1rem;
 	border-bottom-left-radius: 1rem;
 	border-bottom-right-radius: 1rem;
-	background: white;
+	background-color: white;
 }
 
 .effect {
@@ -257,7 +272,7 @@ nav ul li a {
 }
 
 .works:hover, .works:focus {
-	color: #040404;
+	color: #000000;
 }
 /* MY STORY */
 .about {
@@ -306,6 +321,10 @@ nav ul li a {
 
 .line_f:not(:first-child), .line_f:not(:nth-child(2)) {
 	margin-top: 2rem;
+}
+
+.line_f:last-child {
+	margin-bottom: 0rem;
 }
 
 .pic {
@@ -381,7 +400,7 @@ label {
 
 
 button {
-  background-color: #F4550A;
+  background-color: #D04909;
   border: none;
   width: 12.1875rem;
   height: 3.125rem;
@@ -398,7 +417,20 @@ button {
 }
 
 button:hover {
-  background-color: #D14807;
+  background-color: #B13C04;
+}
+
+.address {
+	text-align: center;
+}
+
+.address a {
+	text-decoration: none;
+	color:#3B2693;
+}
+
+.address a:hover {
+	color: #380de4;
 }
 
 .menu-social ul {
@@ -420,20 +452,13 @@ button:hover {
 .icon {
 	width: 3.125rem;
 	height: 3.125rem;
-	fill: #F4550A;
-}
-
-.icon-circle {
-	fill: #F4550A;
+	fill: #CD4607;
 }
 
 .menu-social ul li a:hover .icon {
-	fill: #D14807;
+	fill: #B13C04;
 }
 
-.menu-social ul li a:hover .icon-circle {
-	fill: #D14807;
-}
 /* FOOTER */
 footer {
 	position: relative;
@@ -477,7 +502,7 @@ outline: none;
 	display: inline-block;
 	width: auto;
   height: auto;
-	margin-left: 29rem;
+	margin-left: 21.5rem;
   text-align: center;
 	vertical-align: middle;
 	text-transform: uppercase;
@@ -527,7 +552,7 @@ outline: none;
 
 .title-project {
 	margin-top: 0rem;
-	padding-top: 10rem 0rem 0rem 0rem;
+	padding-top: 10rem;
 }
 
 @media (max-width: 1199px){
@@ -549,16 +574,7 @@ outline: none;
 
 	.menu ul li:not(:first-child){
 		margin-left: 0rem;
-	}
-
-
-/* MY WORKS */
-	.image-block {
-		height: 60%;
-	}
-
-	.content-block {
-		height: 40%;
+		margin-top: 2rem;
 	}
 
 /* MY STORY */
@@ -578,6 +594,10 @@ outline: none;
 	}
 
 /* HEADER */
+  .container {
+		max-width: 32rem;
+	}
+
   .container picture {
 	  max-width: 35px;
   }
@@ -589,11 +609,12 @@ outline: none;
 
 	.main-link:hover {
 		background: none;
-		border-bottom:  0.078rem solid #380DE4;
+		border-bottom:  0.125rem solid #380DE4;
 	}
 
 	.menu ul li:not(:first-child){
 		margin-left: 8.75rem;
+		margin-top: 2rem;
 	}
 
 	.menu ul {
@@ -624,10 +645,32 @@ outline: none;
 	.project-text {
 		width: 60%;
 	}
+
+	.project-link {
+    margin-left: 18.3rem;
+  }
 }
 
 @media (max-width:767px) {
 	/* FONTS */
+	h1 {
+	 font-size: 2rem;
+	 line-height: 3.2rem;
+	 padding: 4rem 0rem 1rem 0rem;
+	}
+
+	#home h2 {
+	 font-size: 1.5rem;
+	 line-height: 2.4rem;
+	}
+
+	#my_works h2, #about_me h2, #my_story h2, #contact_me h2 {
+	 font-size: 2rem;
+	 line-height: 2.12rem;
+	 letter-spacing: 0.16rem;
+	 padding: 5rem 0rem 1rem 0rem;
+	}
+
 	p, h3, .story, .about p {
 		font-size: 1rem;
 		line-height: 1.6rem;
@@ -635,6 +678,7 @@ outline: none;
 /* HEADER */
 	.container {
 		height: 4rem;
+		max-width: 32rem;
 	}
 
 	.container picture {
@@ -658,6 +702,7 @@ outline: none;
 
 	.menu ul li:not(:first-child){
 		margin-left: 0rem;
+		margin-top: 2rem;
 	}
 
 	.title {
@@ -666,7 +711,6 @@ outline: none;
 		line-height: 3.2rem;
 	}
 
-	/* MY STORY */
 	.mein {
 		display: none;
 	}
@@ -677,21 +721,24 @@ outline: none;
 		width: 100%;
 	}
 
+	/*  MY WORKS  */
+
+	.image-block {
+		height: 60%;
+	}
+
+	.content-block {
+		height: 40%;
+	}
+
+	/*  ABOUT ME  */
+
 	.about {
 		margin: 0% 4%;
 	}
 
 	.about p {
 		margin-top: 4%;
-	}
-
-/* MY WORKS */
-	.content-block {
-		height: 50%;
-	}
-
-	.image-block {
-		height: 50%;
 	}
 
 /*MY STORY */
@@ -715,7 +762,7 @@ outline: none;
 	  margin-top: 0rem;
   }
   .project-link {
-    margin-left: 20rem;
+    margin-left: 18.3rem;
   }
 
 	.project-text {
@@ -735,14 +782,15 @@ outline: none;
 	 padding: 4rem 0rem 1rem 0rem;
 	}
 
-	h2 {
+	#home h2 {
 	 font-size: 1.5rem;
 	 line-height: 2.4rem;
 	}
 
-	#my_story h2, #contact_me h2 {
+	#my_works h2, #about_me h2, #my_story h2, #contact_me h2 {
 	 font-size: 2rem;
 	 line-height: 2.12rem;
+	 letter-spacing: 0.16rem;
 	 padding: 5rem 0rem 1rem 0rem;
 	}
 
@@ -763,7 +811,7 @@ outline: none;
 /* HEADER */
   .container {
 		height: 3rem;
-		max-width: 288px;
+		max-width: 18rem;
 	}
 
   .container picture {
@@ -802,6 +850,7 @@ outline: none;
 
 	.menu ul li:not(:first-child){
 		margin-left: 0rem;
+		margin-top: 2rem;
 	}
 
 	.main_p {
@@ -825,12 +874,12 @@ outline: none;
 	  margin: 0% auto 5% auto;
 	}
 
-	.image-block {
-		height: 40%;
+	.works:not(:first-child){
+		margin-top: 5%;
 	}
 
-	.content-block {
-		height: 60%;
+	.works:last-child {
+		margin-bottom: 0%;
 	}
 
 /* MY STORY */
@@ -859,7 +908,7 @@ outline: none;
 
 	.line_f {
 		flex-direction: column;
-	  margin: 0rem auto;
+	  margin: 0rem auto 2rem auto;
 	}
 
 	.line_f:nth-child(even) {
@@ -929,14 +978,14 @@ outline: none;
 
 	.fixed {
 		display: inline-block;
-	  bottom: 1.562rem;
+	  bottom: 2rem;
 	  right: 1rem;
 	}
 
 	.fixedicon {
 		width: 3.125rem;
 		height: 3.125rem;
-		fill: #A4A3A9;
+		fill: #59585F;
 	}
 
 /* PAGES PROJECT1-PROJECT4 */
@@ -945,7 +994,11 @@ outline: none;
    }
 
 	 .project-link {
-	 	 margin-left: 11.5rem;
+	 	 margin-left: 8.3rem;
+	 }
+
+	 .project-link:hover {
+	 	border-bottom: 0.1rem solid #380DE4;
 	 }
 
 	 .project-wrap {
